add Hunt 2023 writeup

--- a/_posts/2023-01-20-mystery-hunt-2023.md
+++ b/_posts/2023-01-20-mystery-hunt-2023.md
@@ -19,9 +19,9 @@ Jen and I were having some initial conversations on what content we wanted to co
 
 The [online version of things](https://www.youtube.com/watch?v=I1i87mwfomw) is pretty straightforward and much more information-driven.  Jen ran the puzzle and meta side of things, while I took the Who Are We, What Is The Mystery Hunt, and the Hunt Safely (AKA Have You Seen Wastewater Numbers Lately, Please Wear A Mask And Wash Your Hands On Campus) sections.
 
-Jen fully took the reins on the interactive in-person side of things, writing [a suite of puzzles](https://puzzles.mit.edu/resources/hth2023/hth2023.html) with contributions from Joon Pahk (a cryptic) and Shai Nir Hana (a really beautiful Japanese-style logic puzzle).  I suggested the location puzzle should do something with the pi-ish nature of the room we were in (4-159, which was our HQ the year Palindrome was I Prefer Pi), but that's literally all I can claim to have done with the set - it's all Jen.
+Jen fully took the reins on the interactive in-person side of things, writing [a suite of puzzles](https://puzzles.mit.edu/resources/hth2023/hth2023.html) about how to solve common Mystery Hunt puzzle types with contributions from Joon Pahk (a cryptic) and Shai Nir Hana (a really beautiful Japanese-style logic puzzle).  I suggested the location puzzle should do something with the pi-ish nature of the room we were in (4-159, which was our HQ the year Palindrome was I Prefer Pi), but that's literally all I can claim to have done with the set - it's all Jen.
 
-<p align="center"><img src="/assets/images/hunt2023/seminar1.jpeg" width=500><img src="/assets/images/hunt2023/seminar2.jpeg" width=500><br>(photo on left: Shai Nir Hana)</p>
+<p align="center"><img src="/assets/images/hunt2023/seminar1.jpeg" width=500><img src="/assets/images/hunt2023/seminar2.jpeg" width=500><br>_(photo on left: Shai Nir Hana)_</p>
 
 I would have been happy if we were presenting things to 5 curious solvers, so I was blown away that we had a full MIT classroom full of ~50 people excited about this, to the point that people were _sitting on the floor_ (there were chairs available.  I don't get it, but I also have 34-year-old knees).  We did an abbreviated version of What Is This and How Can You Do This Safely, then let people loose on the puzzles.  Jen was fully in her element as math teacher, and I was glad to revel in watching people solve our stuff. 
 Plus: now I get to say I was a Visiting Speaker at MIT.
@@ -71,13 +71,13 @@ The AI interactions done in dating-simulator/live voting fashion was also _brill
 
 Mystery Hunt is big.  I'd even hear the argument that it's gotten _too_ big and needs to be shrunk down.  The one year that Mystery Hunt got solved in 14 hours may have been a little too far in the other direction, but I'm not mad that Palindrome ended up finishing that one early Saturday morning - all of my friends were in town!  We got ice cream, saw other teams, and played board games in our room, and it meant lots of other teams got to see more of the Hunt than they usually might.  
 
-I'd maybe like Hunt to last until late Saturday/early Sunday for most teams, but I don't think that attempting to calibrate Hunt to have a shorter runtime for teams at the top is an overall bad goal for the next teams that write.
+I'd maybe like Hunt to last until late Saturday/early Sunday for most teams, but I don't think that attempting to calibrate Hunt to have a shorter runtime for teams at the top is an overall bad goal for the next teams that write. Aim for the middle of the pack teams to see all of the wonderful, crazy things you come up with, and give small teams some sort of early-in-the-Hunt accomplishment to be proud of.
 
 Teammate tried to reduce the puzzle count, but number of puzzles alone is not the only calibration as part of this equation. There was a lot of grinding in this Hunt on an individual puzzle level, and while that's fine up to a certain point, if it's happening for a lot of puzzles it can really wear you down. Sunday was frustrating for us - we had a handful of forward solves with a LOT of nukes being used since the puzzles that were opening up would continue to reveal themselves to have lots of onerous steps.
 
-The editor in me saw lots of places where I'd want to tell writers to see if they could take the cool, magic part of a testsolve - a clever aha, a story twist teams weren't expecting, some sort of jaw-droppingly elegant construction - and get solvers there faster.
+The editor in me saw lots of places where I'd want to tell writers to see if they could take the cool, magic part of a testsolve - a clever aha, a story twist teams weren't expecting, some sort of jaw-droppingly elegant construction - and get solvers there faster than you think you need to.
 
-<p align="center"><img src="/assets/images/hunt2023/scoville.jpeg" width=600><br>(fancy graphic by Justin Ladia)</p>
+<p align="center"><img src="/assets/images/hunt2023/scoville.jpeg" width=600><br>_(fancy graphic: Justin Ladia)_</p>
 
 I made an informal puzzle Scoville scale for Hunt Spiciness after doing the Miskatonic Game a few years ago. Should it probably be a two-axis matrix? Yes, but it's a pretty god explainer on how hard your event as a whole can be. We almost need a puzzle Mohs scale to go along with it - how can you best measure how the individual puzzles within an event make for a varied, appropriately sized event?
 
@@ -89,6 +89,6 @@ This is already longer than I planned, so let's wrap this up.
 
 This was a lovely Hunt with some really admirable big swings, and I liked it a LOT, even for all the moments in the heat of things where I was slightly frustrated. 
 
-I'm looking forward to doing this again next year, when Palindrome will Not Be Winning Hunt again. 
+I'm looking forward to doing this again next year, when **Palindrome Will Not Be Winning Hunt** again. 
 
 You heard it here first.
