add Hunt 2023 writeup

--- a/_posts/2023-01-20-mystery-hunt-2023.md
+++ b/_posts/2023-01-20-mystery-hunt-2023.md
@@ -21,7 +21,7 @@ The [online version of things](https://www.youtube.com/watch?v=I1i87mwfomw) is p
 
 Jen fully took the reins on the interactive in-person side of things, writing [a suite of puzzles](https://puzzles.mit.edu/resources/hth2023/hth2023.html) about how to solve common Mystery Hunt puzzle types with contributions from Joon Pahk (a cryptic) and Shai Nir Hana (a really beautiful Japanese-style logic puzzle).  I suggested the location puzzle should do something with the pi-ish nature of the room we were in (4-159, which was our HQ the year Palindrome was I Prefer Pi), but that's literally all I can claim to have done with the set - it's all Jen.
 
-<p align="center"><img src="/assets/images/hunt2023/seminar1.jpeg" width=500><img src="/assets/images/hunt2023/seminar2.jpeg" width=500><br>_(photo on left: Shai Nir Hana)_</p>
+<p align="center"><img src="/assets/images/hunt2023/seminar1.jpeg" width=500><img src="/assets/images/hunt2023/seminar2.jpeg" width=500><br> <sub><i>photo on left: Shai Nir Hana</i></sub></p>
 
 I would have been happy if we were presenting things to 5 curious solvers, so I was blown away that we had a full MIT classroom full of ~50 people excited about this, to the point that people were _sitting on the floor_ (there were chairs available.  I don't get it, but I also have 34-year-old knees).  We did an abbreviated version of What Is This and How Can You Do This Safely, then let people loose on the puzzles.  Jen was fully in her element as math teacher, and I was glad to revel in watching people solve our stuff. 
 Plus: now I get to say I was a Visiting Speaker at MIT.
@@ -77,7 +77,7 @@ Teammate tried to reduce the puzzle count, but number of puzzles alone is not th
 
 The editor in me saw lots of places where I'd want to tell writers to see if they could take the cool, magic part of a testsolve - a clever aha, a story twist teams weren't expecting, some sort of jaw-droppingly elegant construction - and get solvers there faster than you think you need to.
 
-<p align="center"><img src="/assets/images/hunt2023/scoville.jpeg" width=600><br>_(fancy graphic: Justin Ladia)_</p>
+<p align="center"><img src="/assets/images/hunt2023/scoville.jpeg" width=600><br><sub><i>fancy graphic: Justin Ladia)</i></sub></p>
 
 I made an informal puzzle Scoville scale for Hunt Spiciness after doing the Miskatonic Game a few years ago. Should it probably be a two-axis matrix? Yes, but it's a pretty god explainer on how hard your event as a whole can be. We almost need a puzzle Mohs scale to go along with it - how can you best measure how the individual puzzles within an event make for a varied, appropriately sized event?
 
