add Hunt 2023 writeup

--- a/_posts/2023-01-20-mystery-hunt-2023.md
+++ b/_posts/2023-01-20-mystery-hunt-2023.md
@@ -77,7 +77,7 @@ Teammate tried to reduce the puzzle count, but number of puzzles alone is not th
 
 The editor in me saw lots of places where I'd want to tell writers to see if they could take the cool, magic part of a testsolve - a clever aha, a story twist teams weren't expecting, some sort of jaw-droppingly elegant construction - and get solvers there faster than you think you need to.
 
-<p align="center"><img src="/assets/images/hunt2023/scoville.jpeg" width=600><br><sub><i>fancy graphic: Justin Ladia)</i></sub></p>
+<p align="center"><img src="/assets/images/hunt2023/scoville.jpeg" width=600><br><sub><i>fancy graphic: Justin Ladia</i></sub></p>
 
 I made an informal puzzle Scoville scale for Hunt Spiciness after doing the Miskatonic Game a few years ago. Should it probably be a two-axis matrix? Yes, but it's a pretty god explainer on how hard your event as a whole can be. We almost need a puzzle Mohs scale to go along with it - how can you best measure how the individual puzzles within an event make for a varied, appropriately sized event?
 
