add Hunt 2023 writeup

--- a/_posts/2023-01-20-mystery-hunt-2023.md
+++ b/_posts/2023-01-20-mystery-hunt-2023.md
@@ -13,7 +13,7 @@ Howdy!  This is a post about the 2023 MIT Mystery Hunt and may contain spoilers 
 
 No, seriously, asking Jen McTeague if she wanted collaborate on what our How To Hunt Seminar would be was the. best. decision.
 
-Jen made a ton of brilliant video breakdowns on Hunt structures for our team _while we were writing our Hunt_, and her deep love of what makes for a good Hunt felt perfect for the general goal of the How to Hunt seminar, Getting People Who Don't Know What They Signed Up For Excited About What This Crazy Puzzle Thing.
+Jen made a ton of brilliant video breakdowns on Hunt structures for our team _while we were writing our Hunt_, and her deep love of what makes for a good Hunt felt perfect for the general goal of the How to Hunt seminar, Getting People Who Don't Know What They Signed Up For Excited About This Crazy Puzzle Thing.
 
 Jen and I were having some initial conversations on what content we wanted to cover when Teammate reached out to us asking how we were planning on running things. Not wanting to lose the ability to do this for _everyone_ who's hunting, not just the people that show up in person on Thursday night, we opted to do things in two parts: an online overview in the vein of what Left Out and [whoosh] Galactic Trendsetters [neeyow] had done the past few years, and something more interactive for the in-person part of things.
 
@@ -30,7 +30,7 @@ Plus: now I get to say I was a Visiting Speaker at MIT.
 
 <p align="center"><img src="/assets/images/hunt2023/whatayear.jpeg" width=400></p>
 
-As noted in [my wrap-up of our hunt last year](/2021/01/27/mystery-hunt-2022-a-lot-of-hats/), I'm in charge of Palindrome now!  It's still wild to me, and it didn't fully sink in just what that means until I met up with some of our team members after we got done running the seminar at a local brewery.
+As noted in [my wrap-up of our hunt last year](/2022/01/27/mystery-hunt-2022-a-lot-of-hats/), I'm in charge of Palindrome now!  It's still wild to me, and it didn't fully sink in just what that means until I met up with some of our team members after we got done running the seminar at a local brewery.
 
 <p align="center"><img src="/assets/images/hunt2023/lamp.jpeg" width=600></p>
 
