add MH2024 and Feb reading log

--- a/_posts/2024-03-01-mystery-hunt-2024.md
+++ b/_posts/2024-03-01-mystery-hunt-2024.md
@@ -26,7 +26,7 @@ There were a few places in interactions where I felt like story was happening At
 
 I legitimately don't feel like I solved as many puzzles this year as I have in the last few years, probably due to captaining. Here's a bunch of notes for things I remember solving or at least intently looking at other people solve:
 
-<p align="center"><img src="/assets/images/hunt2024/starratsed.jpg"></p>
+<p align="center"><img src="/assets/images/hunt2024/starratsed.jpeg"></p>
 
 - this image that Joe Cabrera drew for the send-us-your-team-getting-destroyed-Teen-Girl-Squad-style part of [Greek Girl Squad](https://mythstoryhunt.world/puzzles/greek-girl-squad) is framed and on my wall now.
 - [Corporate Change](https://mythstoryhunt.world/puzzles/corporate-change) was cute and a nice immediate "oh, I know what's going on here" in round 1.
