add MH2024 and Feb reading log

--- a/_posts/2024-03-01-mystery-hunt-2024.md
+++ b/_posts/2024-03-01-mystery-hunt-2024.md
@@ -6,7 +6,7 @@ Howdy!  This is a post about the 2024 MIT Mystery Hunt and may contain spoilers 
 
 <p align="center"><img src="/assets/images/hunt2024/dodgeball.jpg"></p>
 
-Palindrome won the MIT Mystery Hunt in 2021, wrote the 2022 Hunt (which I've written about my experience with [pretty extensively on this site]()), and I've been captain of the team since then. 
+Palindrome won the MIT Mystery Hunt in 2021, wrote the 2022 Hunt (which I've written about my experience with [pretty extensively on this site](https://goodatinter.net/mystery-hunt-2022/)), and I've been captain of the team since then. 
 
 My goal in writing about my Hunt experiences post-2022 is to not compare every Hunt that follows it to The Hunt I Wrote. Nostalgia's powerful, my memories of that are tied to deep emotions from all the work our team put in, and I know that while it's very similar to how any team would write Hunt, it's also _very different_. That said, writing the Hunt and coming out the other side has fundamentally altered how I look at it while I'm in the midst of solving it, so some comparisons are bound to occur.
 
