add MH2024 and Feb reading log

--- a/_posts/2024-03-01-mystery-hunt-2024.md
+++ b/_posts/2024-03-01-mystery-hunt-2024.md
@@ -22,7 +22,7 @@ There was so much interaction and acting in this Hunt, and it made me happy. It'
 
 There were a few places in interactions where I felt like story was happening At Us rather than really including us. I was in my 20s in the 2010s, which means that like many white men in my cohort, I went through an Unfortunate Improv Phase and will gladly Yes And you and be ridiculous. Please include me if I'm giving you room instead of completely shutting me down.
 
-### Puzzles
+### Puzzles!
 
 I legitimately don't feel like I solved as many puzzles this year as I have in the last few years, probably due to captaining. Here's a bunch of notes for things I remember solving or at least intently looking at other people solve:
 
@@ -37,13 +37,13 @@ I legitimately don't feel like I solved as many puzzles this year as I have in t
 - [Fren Amis](https://mythstoryhunt.world/puzzles/fren-amis) successfully allowed me to use my year of Duolingo Finnish to solve one (1) clue, thank you TTBNL
 - Jenna LeFleur and I crunched out [ERROR: PUZZLE DISABLED](https://mythstoryhunt.world/solutions/error-puzzle-disabled) together and it was a great co-solve 
 
-### Adapting to Technical Challenges
+### Adapting to Technical Challenges!
 
 If the web server for our Hunt was down for the first hour I would have broken out in hives, thank you TTBNL for coming up with a plan for the round you distributed as Google Docs and making it happen.
 
 ## What could have been better
 
-### Too much!
+### Too much
 
 I applaud the decision to include a "fish round" in this year's Hunt - it's a great way to keep smaller teams engaged, and it's a nice little amuse-bouche/palate cleanser between meatier solves for the teams at the front of the pack. Seriously, as captain, I don't get to fully _solve_ a lot of puzzles, and the few times I got to find one of these first, get the gist of it, and do most of the solving on my own at 2am when I should have been sleeping was a treat.
 
